2007-05-30  Frederic Ruaudel <grumz@grumz.net>
	* libnautilus-actions/nautilus-actions-config-gconf-reader.c:
	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config-gconf-writer.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* nact/nact-profile-editor.c:
	* nact/nact-editor.c:
	* nact/nact-editor.h:
	* nact/nact.c: Change the way the profile names are managed to add
	the existence of a description name for better readability in Nact.
	It allows the use of UTF8 names in the profiles list.

	* nact/nact-editor.c:
	* nact/nact.c: Fix some missing/buggy resources freeing.

	* libnautilus-actions/nautilus-actions-config-gconf-writer.c:
	Fix action profile saving in GConf.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Replace the "duplicate" profile button by
	a "copy" and a "paste" button, so it is now possible to copy a 
	profile from one action to another.

	* nact/nact-editor.c: Update the "save action" code

2007-05-25  Frederic Ruaudel <grumz@grumz.net>
	* nact/nautilus-actions-config.glade:
	* nact/nact-profile-editor.c: Fix the problem which make the legend 
	dialog modal (Bug #337542) by changing the Legend button into a 
	toggle button. The Legend dialog can't be closed directly.

	* nact/nact-editor.c: Implement renaming of a profile

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h: Add func
	to rename a profile.

	* nact/nact-editor.c: implement deletion of a profile

	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* nact/nact-editor.c: Change the definition of the function 
	nautilus_actions_config_action_add_profile () to manage error
	when the profile name already exists.
